# LLM-Projects

./: .gitignore  Airline AI Assistant.py  Llama 3.1 Transformer Architecture.md  Multi-Modal Apps_dalle_speech_gradio.py  Neural Network Intro  Neural Network Intro.md  RawRAG.py  gptCallingACustomFunctions.py
Advanced RAG Techniques Pre-processing, Re-ranking,  Evals/: Readme.md
Advanced RAG Techniques Pre-processing, Re-ranking,  Evals/pro_implementation/: answer.py
Agentic AI/: Multi-Model API Integration.py  Readme.md
Agentic AI/01-Agentic AI Systems Foundation/: Readme.md  plain_vanila_agent_todo_loop.md
Agentic AI/02-OpenAI Agents SDK/: Readme.md
Agentic AI/03-CrewAI/: Readme.md
Agentic AI/03-CrewAI/code/coder/: pyproject.toml
Agentic AI/03-CrewAI/code/coder/src/coder/: crew.py  main.py
Agentic AI/03-CrewAI/code/coder/src/coder/config/: agents.yaml  tasks.yaml
Agentic AI/03-CrewAI/code/debate/: pyproject.toml
Agentic AI/03-CrewAI/code/debate/src/debate/: crew.py  main.py
Agentic AI/03-CrewAI/code/debate/src/debate/config/: agents.yaml  tasks.yaml
Agentic AI/03-CrewAI/code/engineering_team/: pyproject.toml
Agentic AI/03-CrewAI/code/engineering_team/src/engineering_team/: crew.py  main.py
Agentic AI/03-CrewAI/code/engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
Agentic AI/03-CrewAI/code/financial_researcher/: pyproject.toml
Agentic AI/03-CrewAI/code/financial_researcher/src/financial_researcher/: crew.py  main.py
Agentic AI/03-CrewAI/code/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
Agentic AI/03-CrewAI/code/stock_picker/: pyproject.toml
Agentic AI/03-CrewAI/code/stock_picker/src/stock_picker/: crew.py  main.py
Agentic AI/03-CrewAI/code/stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
Agentic AI/03-CrewAI/code/stock_picker/src/stock_picker/tools/: push_tool.py
Agentic AI/04-LangGraph/: Readme.md
Agentic AI/05-Autogen/: Readme.md
Agentic AI/06-MCP with OpenAI Agents SDK/: Readme.md
Agentic AI/Agentic AI Systems Foundation/: Readme.md
Agentic AI/OpenAI Agents SDK/: Readme.md
Agentic AI/code/: Multi-LLM Evaluation.py  Multi-Model API Integration.py
Build Vanilla Autonomous multi agent system/01- Intro to Agentic AI & Serverless/: Readme.md
Build Vanilla Autonomous multi agent system/02-RAG on ChromaDB with chatgpt 5, llama fine tuned, in house neural network/: Readme.md
Build Vanilla Autonomous multi agent system/03- Vanilla Agentic Workflow with Multi-Model AI and Tool Orchestration/: Readme - extra.md  Readme.md
Deep Neural Network for Price Prediction/: Readme.md
Fine-Tuning for Frontier Models/: Fine-Tuning for Frontier Models.md  Readme.md
Fine-tuned open-source model to compete with Frontier model/: Readme_detailed.md
Lora on Llama 3.2/: Readme.md  llama_3.2_3b_architecture_explanation.md
ML, LLM,  IA concepts in python/: RAG_Pipeline_with_LangChain_Chroma.py  RAG_embedding_visualization.py  chatbetweenAI.py
ML, LLM,  IA concepts in python/Fine-tuned open-source model to compete with Frontier model/: AdamW Optimizer.md  Readme.md
Neural_Network_InHouse/: Neural Network Intro.md
RAG with Test Evaluation/: Readme.md
(+25 files in other folders)
