# CrewAI project configuration - also a uv project
[project]
name = "debate"
version = "0.1.0"
description = "Debate crew using crewAI"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

# Entry point: 'crewai run' calls debate.main:run
[project.scripts]
debate = "debate.main:run"
run_crew = "debate.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Marks this as a crew-type project for the crewai CLI
[tool.crewai]
type = "crew"
