# CrewAI project configuration - also a uv project
[project]
name = "engineering_team"
version = "0.1.0"
description = "Engineering team crew using crewAI"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

# Entry point: 'crewai run' calls engineering_team.main:run
[project.scripts]
engineering_team = "engineering_team.main:run"
run_crew = "engineering_team.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Marks this as a crew-type project for the crewai CLI
[tool.crewai]
type = "crew"
