# CrewAI project configuration - also a uv project
[project]
name = "financial_researcher"
version = "0.1.0"
description = "Financial researcher crew using crewAI with SerperDevTool"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

# Entry point: 'crewai run' calls financial_researcher.main:run
[project.scripts]
financial_researcher = "financial_researcher.main:run"
run_crew = "financial_researcher.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Marks this as a crew-type project for the crewai CLI
[tool.crewai]
type = "crew"
